--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
-  <artifactId>UshaJenkins</artifactId>
+  <groupId>com.example</groupId>
+  <artifactId>seleniuminmaven</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>UshaJenkins</name>
+  <name>seleniuminmaven</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -16,20 +16,22 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>7.10.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-java</artifactId>
-      <version>4.25.0</version>
-    </dependency>
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.29.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.11.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -46,12 +48,13 @@
               <goal>copy-resources</goal>
             </goals>
             <configuration>
-              <outputDirectory>${project.basedir}/docs</outputDirectory> <!-- Deploy to /docs folder -->
+              <outputDirectory>${project.basedir}/docs</outputDirectory>
+              <!-- Deploy to /docs folder -->
               <resources>
                 <resource>
                   <directory>src/main/resources</directory>
                   <includes>
-                    <include>*/</include> <!-- Copy all files in src/main/resources -->
+                    <include>/*</include> <!-- Copy all files in src/main/resources -->
                   </includes>
                 </resource>
               </resources>
